# music_solana_trae

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
client/: client.ts
client/idl/: idl_0405_1632.json
docs/: api.md
src/: error.rs  lib.rs  processor.rs  state.rs
src/errors/: mod.rs
