[package]
name = "trae_demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "trae_demo"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []